--- a/templates/umd.html
+++ b/templates/umd.html
@@ -10,6 +10,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.2.0/require.js"></script>
 
 <script>
+    window.D2L = true;
     require.config({
         paths: {
             json: 'https://cdnjs.cloudflare.com/ajax/libs/requirejs-plugins/1.0.3/json.min',
